--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
         <br />
         <button class="btn-sign-up">Sign Up</button>
    </div>
-   <script defer src=".//script.js"></script>
+   <script defer src=".//index.js"></script>
 </body>
 </html>
